add standard error, log x axis, and axis color sliders to display

--- a/risk_variant_data.ipynb
+++ b/risk_variant_data.ipynb
@@ -63,8 +63,9 @@
     "meta5_loci['GWAS']='META5'\n",
     "meta5_loci['EFFECT_FREQ_NALLS']=meta5_loci['EFFECT_FREQ']\n",
     "meta5_loci['BETA_NALLS']=meta5_loci['BETA']\n",
+    "meta5_loci['SE_NALLS']=meta5_loci['SE']\n",
     "meta5_loci['P_NALLS']=meta5_loci['P']\n",
-    "meta5_loci = meta5_loci[['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','REF','ALT','EFFECT_ALLELE','OTHER_ALLELE','EFFECT_FREQ_NALLS','BETA_NALLS','P_NALLS']]\n",
+    "meta5_loci = meta5_loci[['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','REF','ALT','EFFECT_ALLELE','OTHER_ALLELE','EFFECT_FREQ_NALLS','BETA_NALLS','SE_NALLS','P_NALLS']]\n",
     "print(meta5_loci.shape)\n",
     "print(meta5_loci.head())"
    ]
@@ -89,8 +90,9 @@
     "prog_loci = prog_loci.rename(columns={\"MAF\": \"FREQ\"})\n",
     "prog_loci['EFFECT_FREQ_IWAKI']=prog_loci['FREQ']\n",
     "prog_loci['BETA_IWAKI']=prog_loci['BETA']\n",
+    "prog_loci['SE_IWAKI']=prog_loci['SE']\n",
     "prog_loci['P_IWAKI']=prog_loci['P']\n",
-    "prog_loci = prog_loci[['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','REF','ALT','EFFECT_ALLELE','OTHER_ALLELE','EFFECT_FREQ_IWAKI','BETA_IWAKI','P_IWAKI']]\n",
+    "prog_loci = prog_loci[['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','REF','ALT','EFFECT_ALLELE','OTHER_ALLELE','EFFECT_FREQ_IWAKI','BETA_IWAKI','SE_IWAKI','P_IWAKI']]\n",
     "\n",
     "print(prog_loci.shape)\n",
     "print(prog_loci.head())"
@@ -116,8 +118,9 @@
     "asian_loci = asian_loci.rename(columns={\"MAF\": \"FREQ\"})\n",
     "asian_loci['EFFECT_FREQ_FOO']=asian_loci['FREQ']\n",
     "asian_loci['BETA_FOO']=asian_loci['BETA']\n",
+    "asian_loci['SE_FOO']=asian_loci['SE']\n",
     "asian_loci['P_FOO']=asian_loci['P']\n",
-    "asian_loci = asian_loci[['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','REF','ALT','EFFECT_ALLELE','OTHER_ALLELE','EFFECT_FREQ_FOO','BETA_FOO','P_FOO']]\n",
+    "asian_loci = asian_loci[['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','REF','ALT','EFFECT_ALLELE','OTHER_ALLELE','EFFECT_FREQ_FOO','BETA_FOO','SE_FOO','P_FOO']]\n",
     "print(asian_loci.shape)\n",
     "print(asian_loci.head())"
    ]
@@ -183,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta5_gwas_sub = meta5_gwas[['RSID','REF','ALT','A1','A2','BETA','FREQ','P']]"
+    "meta5_gwas_sub = meta5_gwas[['RSID','REF','ALT','A1','A2','BETA','SE','FREQ','P']]"
    ]
   },
   {
@@ -289,8 +292,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_meta5_gwas = final_meta5_gwas[['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','EFFECT_ALLELE','OTHER_ALLELE','FREQ','BETA','OR','P']]\n",
-    "final_meta5_gwas.columns = ['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','EFFECT_ALLELE','OTHER_ALLELE','EFFECT_FREQ_NALLS','BETA_NALLS','OR_NALLS','P_NALLS']"
+    "final_meta5_gwas = final_meta5_gwas[['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','EFFECT_ALLELE','OTHER_ALLELE','FREQ','BETA','SE','OR','P']]\n",
+    "final_meta5_gwas.columns = ['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','EFFECT_ALLELE','OTHER_ALLELE','EFFECT_FREQ_NALLS','BETA_NALLS','SE_NALLS','OR_NALLS','P_NALLS']"
    ]
   },
   {
@@ -317,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "asian_gwas_sub = asian_gwas[['RSID','A1','A2','BETA','FREQ','P']]"
+    "asian_gwas_sub = asian_gwas[['RSID','A1','A2','BETA','SE','FREQ','P']]"
    ]
   },
   {
@@ -405,8 +408,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_asian_gwas = final_asian_gwas[['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','EFFECT_ALLELE','OTHER_ALLELE','FREQ','BETA','OR','P']]\n",
-    "final_asian_gwas.columns = ['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','EFFECT_ALLELE','OTHER_ALLELE','EFFECT_FREQ_FOO','BETA_FOO','OR_FOO','P_FOO']"
+    "final_asian_gwas = final_asian_gwas[['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','EFFECT_ALLELE','OTHER_ALLELE','FREQ','BETA','SE','OR','P']]\n",
+    "final_asian_gwas.columns = ['RSID','LOC_NUM','CHR_BP','NEAR_GENE','GWAS','EFFECT_ALLELE','OTHER_ALLELE','EFFECT_FREQ_FOO','BETA_FOO','SE_FOO','OR_FOO','P_FOO']"
    ]
   },
   {
@@ -761,15 +764,6 @@
     "final_pop_freqs.loc[final_pop_freqs['GWAS']=='META5','P_GWAS'] = final_pop_freqs.loc[final_pop_freqs['GWAS']=='META5','P_NALLS']\n",
     "final_pop_freqs.loc[final_pop_freqs['GWAS']=='Asian','P_GWAS'] = final_pop_freqs.loc[final_pop_freqs['GWAS']=='Asian','P_FOO']\n",
     "final_pop_freqs.loc[final_pop_freqs['GWAS']=='Progression','P_GWAS'] = final_pop_freqs.loc[final_pop_freqs['GWAS']=='Progression','P_IWAKI']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_pop_freqs.to_csv(f\"/path/to/app/PDLandscapePlot/www/risk_variant_data.csv\",index=None)\n"
    ]
   },
   {
